<resources>
    <string name="app_name">Keeper</string>
    <string name="preference_file">com.eb.appdemo.PREFERENCE_FILE_KEY</string>

    <string name="presentation_heading">Lorem Ipsum</string>
    <string name="presentation_tag_line">There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="next_btn">Next</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="select_age">Select Your Age</string>
    <string name="sing_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_module">Nuevo Módulo</string>
    <string name="nombre_modulo">Nombre del módulo</string>
    <string name="nombre_campo">Nombre del campo</string>
    <string name="invernadero">Invernadero</string>
    <string name="campo_abierto">Campo abierto</string>
    <string name="hidroponico">Hidropónico</string>
    <string name="tipo_campo">Seleccione Tipo de Campo</string>
    <string name="url_service">Url del servicio</string>
    <string name="usr_service">Usuario</string>
    <string name="pwd_service">Password</string>
    <string name="test_credential">test servicio</string>

    <string name="resumen_modulo">Módulo :</string>
    <string name="resumen_campo">Campo :</string>
    <string name="resumen_tipo">Tipo :</string>
    <string name="resumen_fecha_inicio">Fecha Inicio :</string>
    <string name="resumen_semana_fumigacion">Semanas Fumigación :</string>
    <string name="resumen_semanas_limpieza">Semanas Limpieza :</string>
    <string name="resumen_semanas_cosecha">Semanas Cosecha :</string>

    <string name="datos_generales">Datos Generales</string>
    <string name="semanas_calendario">Semanas Calendario</string>
    <string name="validar_servicio">Validar Servicio</string>
    <string name="resume_new_module">Resumen del nuevo módulo</string>
    <string name="agregar_modulo">Agregar Nuevo Módulo</string>
    <string name="ingresar">Bienvenido! Ingresar</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="enter_password">Enter Password</string>
    <string name="responsables_title">Responsables : </string>
    <string name="title_activity_detalle_modulo">DetalleModuloActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dash">-</string>

</resources>