<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.LoginSignup.SignUp"
    android:background="@color/light_blue_sky"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:transitionName="transition_back_arrow_btn"/>

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/outer_space_crayola"
            android:textSize="40sp"
            android:fontFamily="@font/muli_light"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:transitionName="transition_title_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40sp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/ming"
                app:boxStrokeColor="@color/ming"
                app:startIconDrawable="@drawable/ic_baseline_create_24"
                app:startIconTint="@color/ming"
                android:textColorHint="@color/ming"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/ming"
                app:boxStrokeColor="@color/ming"
                app:startIconDrawable="@drawable/ic_baseline_person_white_24"
                app:startIconTint="@color/ming"
                android:textColorHint="@color/ming"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/ming"
                app:boxStrokeColor="@color/ming"
                app:startIconDrawable="@drawable/ic_outline_email_24"
                app:startIconTint="@color/ming"
                android:textColorHint="@color/ming"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/ming"
                app:boxStrokeColor="@color/ming"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                app:startIconTint="@color/ming"
                android:textColorHint="@color/ming"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/ming"
                app:hintTextColor="@color/ming"
                app:boxStrokeColor="@color/ming"
                app:startIconDrawable="@drawable/ic_outline_lock_24"
                app:startIconTint="@color/ming"
                android:textColorHint="@color/ming"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:textColor="@color/maximum_blue"
            android:backgroundTint="@color/outer_space_crayola"
            android:onClick="callNextSignUpScreen"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_next_btn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/login"
            android:textColor="@color/outer_space_crayola"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:transitionName="transition_login_btn"/>


    </LinearLayout>

</ScrollView>