<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.LoginSignup.SignUp2nd"
    android:background="@color/light_blue_sky"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup2nd_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:transitionName="transition_back_arrow_btn"/>

        <TextView
            android:id="@+id/signup2nd_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/outer_space_crayola"
            android:textSize="40sp"
            android:fontFamily="@font/muli_light"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:transitionName="transition_title_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_gender"
                android:textColor="@color/ming"
                android:textSize="18sp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/rdb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:textColor="@color/ming"
                    android:buttonTint="@color/ming"
                    android:layout_marginRight="5dp"/>

                <RadioButton
                    android:id="@+id/rdb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textColor="@color/ming"
                    android:buttonTint="@color/ming"/>
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/ming"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_age"
                android:textColor="@color/ming"
                android:textSize="18sp"/>

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                android:calendarTextColor="@color/ming"/>


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup2nd_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:textColor="@color/maximum_blue"
            android:backgroundTint="@color/outer_space_crayola"
            android:onClick="callNextSignUp3rdScreen"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_next_btn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup2nd_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/login"
            android:textColor="@color/outer_space_crayola"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:transitionName="transition_login_btn"/>


    </LinearLayout>

</ScrollView>